--- a/LeetCodeMath/LeetCodeMath.csproj
+++ b/LeetCodeMath/LeetCodeMath.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Maximum69Number.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubtractTheProductAndSumOfDigitsOfAnInteger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
