--- a/LeetCodeStrings/LeetCodeStrings.csproj
+++ b/LeetCodeStrings/LeetCodeStrings.csproj
@@ -46,6 +46,7 @@
     <Compile Include="LongPressedNames.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReverseString.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
