--- a/LeetCodeMath/LeetCodeMath.csproj
+++ b/LeetCodeMath/LeetCodeMath.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="FindNumbersWithEvenNumberOfDigits.cs" />
     <Compile Include="Maximum69Number.cs" />
+    <Compile Include="PalindromeNumber.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubtractTheProductAndSumOfDigitsOfAnInteger.cs" />
