--- a/LeetCodeStrings/LeetCodeStrings.csproj
+++ b/LeetCodeStrings/LeetCodeStrings.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReverseString.cs" />
     <Compile Include="ReverseWordsInAStringIII.cs" />
+    <Compile Include="ValidPalindrome.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
