--- a/LeetCodeArrays/.gitignore
+++ b/LeetCodeArrays/.gitignore
@@ -2,3 +2,16 @@
 # 
 # Everything specific to your OS, IDE, etc.. should go into your global .gitignore
 # (usually found at $HOME/.gitignore)
+# Project-specific .gitignore
+# 
+# Everything specific to your OS, IDE, etc.. should go into your global .gitignore
+# (usually found at $HOME/.gitignore)
+
+# Folders
+bin
+obj
+Properties
+
+# Files
+App.config
+LeetCodeArrays.csproj
