--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 # 
 # Everything specific to your OS, IDE, etc.. should go into your global .gitignore
 # (usually found at $HOME/.gitignore)
+
+# Files
+CSharpPracticeExercises.sln
