--- a/LeetCodeArrays/.gitignore
+++ b/LeetCodeArrays/.gitignore
@@ -2,10 +2,8 @@
 # 
 # Everything specific to your OS, IDE, etc.. should go into your global .gitignore
 # (usually found at $HOME/.gitignore)
-# Project-specific .gitignore
-# 
-# Everything specific to your OS, IDE, etc.. should go into your global .gitignore
-# (usually found at $HOME/.gitignore)
+
+# Create a cleaner repository on github
 
 # Folders
 bin
