--- a/CSharpPracticeExercises/.gitignore
+++ b/CSharpPracticeExercises/.gitignore
@@ -3,6 +3,12 @@
 # Everything specific to your OS, IDE, etc.. should go into your global .gitignore
 # (usually found at $HOME/.gitignore)
 
+# Create a cleaner repository on github
+
+# Folders
+bin
+obj
+Properties
+
 # Files
-CSharpPracticeExercises.sln
-.gitignore
+App.config
