--- a/CSharpPracticeExercises.csproj
+++ b/CSharpPracticeExercises.csproj
@@ -45,7 +45,9 @@
   <ItemGroup>
     <Compile Include="HR_W_CountingValleys.cs" />
     <Compile Include="HR_W_SockMerchant.cs" />
+    <Compile Include="LC_A_FindNUniqueIntegersSumUpToZero.cs" />
     <Compile Include="LC_M_FindNumbersWithEvenNumberOfDigits.cs" />
+    <Compile Include="LC_S_LongestPalindromicSubstring.cs" />
     <Compile Include="LC_S_LongPressedNames.cs" />
     <Compile Include="LC_M_Maximum69Number.cs" />
     <Compile Include="LC_M_PalindromeNumber.cs" />
